lib/src/xxhash_bindings.g.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/xxhash.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class XxhashBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  XxhashBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  XxhashBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// !
  /// @brief Obtains the xxHash version.
  ///
  /// This is mostly useful when xxHash is compiled as a shared library,
  /// since the returned value comes from the library, as opposed to header file.
  ///
  /// @return @ref XXH_VERSION_NUMBER of the invoked library.
  int XXH_versionNumber() {
    return _XXH_versionNumber();
  }

  late final _XXH_versionNumberPtr =
      _lookup<ffi.NativeFunction<ffi.UnsignedInt Function()>>(
          'XXH_versionNumber');
  late final _XXH_versionNumber =
      _XXH_versionNumberPtr.asFunction<int Function()>();

  /// !
  /// @brief Calculates the 32-bit hash of @p input using xxHash32.
  ///
  /// @param input The block of data to be hashed, at least @p length bytes in size.
  /// @param length The length of @p input, in bytes.
  /// @param seed The 32-bit seed to alter the hash's output predictably.
  ///
  /// @pre
  /// The memory between @p input and @p input + @p length must be valid,
  /// readable, contiguous memory. However, if @p length is `0`, @p input may be
  /// `NULL`. In C++, this also must be *TriviallyCopyable*.
  ///
  /// @return The calculated 32-bit xxHash32 value.
  ///
  /// @see @ref single_shot_example "Single Shot Example" for an example.
  int XXH32(
    ffi.Pointer<ffi.Void> input,
    int length,
    int seed,
  ) {
    return _XXH32(
      input,
      length,
      seed,
    );
  }

  late final _XXH32Ptr = _lookup<
      ffi.NativeFunction<
          XXH32_hash_t Function(
              ffi.Pointer<ffi.Void>, ffi.Size, XXH32_hash_t)>>('XXH32');
  late final _XXH32 =
      _XXH32Ptr.asFunction<int Function(ffi.Pointer<ffi.Void>, int, int)>();

  /// !
  /// @brief Allocates an @ref XXH32_state_t.
  ///
  /// @return An allocated pointer of @ref XXH32_state_t on success.
  /// @return `NULL` on failure.
  ///
  /// @note Must be freed with XXH32_freeState().
  ///
  /// @see @ref streaming_example "Streaming Example"
  ffi.Pointer<XXH32_state_t> XXH32_createState() {
    return _XXH32_createState();
  }

  late final _XXH32_createStatePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<XXH32_state_t> Function()>>(
          'XXH32_createState');
  late final _XXH32_createState =
      _XXH32_createStatePtr.asFunction<ffi.Pointer<XXH32_state_t> Function()>();

  /// !
  /// @brief Frees an @ref XXH32_state_t.
  ///
  /// @param statePtr A pointer to an @ref XXH32_state_t allocated with @ref XXH32_createState().
  ///
  /// @return @ref XXH_OK.
  ///
  /// @note @p statePtr must be allocated with XXH32_createState().
  ///
  /// @see @ref streaming_example "Streaming Example"
  int XXH32_freeState(
    ffi.Pointer<XXH32_state_t> statePtr,
  ) {
    return _XXH32_freeState(
      statePtr,
    );
  }

  late final _XXH32_freeStatePtr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<XXH32_state_t>)>>(
      'XXH32_freeState');
  late final _XXH32_freeState = _XXH32_freeStatePtr.asFunction<
      int Function(ffi.Pointer<XXH32_state_t>)>();

  /// !
  /// @brief Copies one @ref XXH32_state_t to another.
  ///
  /// @param dst_state The state to copy to.
  /// @param src_state The state to copy from.
  /// @pre
  /// @p dst_state and @p src_state must not be `NULL` and must not overlap.
  void XXH32_copyState(
    ffi.Pointer<XXH32_state_t> dst_state,
    ffi.Pointer<XXH32_state_t> src_state,
  ) {
    return _XXH32_copyState(
      dst_state,
      src_state,
    );
  }

  late final _XXH32_copyStatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<XXH32_state_t>,
              ffi.Pointer<XXH32_state_t>)>>('XXH32_copyState');
  late final _XXH32_copyState = _XXH32_copyStatePtr.asFunction<
      void Function(ffi.Pointer<XXH32_state_t>, ffi.Pointer<XXH32_state_t>)>();

  /// !
  /// @brief Resets an @ref XXH32_state_t to begin a new hash.
  ///
  /// @param statePtr The state struct to reset.
  /// @param seed The 32-bit seed to alter the hash result predictably.
  ///
  /// @pre
  /// @p statePtr must not be `NULL`.
  ///
  /// @return @ref XXH_OK on success.
  /// @return @ref XXH_ERROR on failure.
  ///
  /// @note This function resets and seeds a state. Call it before @ref XXH32_update().
  ///
  /// @see @ref streaming_example "Streaming Example"
  int XXH32_reset(
    ffi.Pointer<XXH32_state_t> statePtr,
    int seed,
  ) {
    return _XXH32_reset(
      statePtr,
      seed,
    );
  }

  late final _XXH32_resetPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<XXH32_state_t>, XXH32_hash_t)>>('XXH32_reset');
  late final _XXH32_reset = _XXH32_resetPtr.asFunction<
      int Function(ffi.Pointer<XXH32_state_t>, int)>();

  /// !
  /// @brief Consumes a block of @p input to an @ref XXH32_state_t.
  ///
  /// @param statePtr The state struct to update.
  /// @param input The block of data to be hashed, at least @p length bytes in size.
  /// @param length The length of @p input, in bytes.
  ///
  /// @pre
  /// @p statePtr must not be `NULL`.
  /// @pre
  /// The memory between @p input and @p input + @p length must be valid,
  /// readable, contiguous memory. However, if @p length is `0`, @p input may be
  /// `NULL`. In C++, this also must be *TriviallyCopyable*.
  ///
  /// @return @ref XXH_OK on success.
  /// @return @ref XXH_ERROR on failure.
  ///
  /// @note Call this to incrementally consume blocks of data.
  ///
  /// @see @ref streaming_example "Streaming Example"
  int XXH32_update(
    ffi.Pointer<XXH32_state_t> statePtr,
    ffi.Pointer<ffi.Void> input,
    int length,
  ) {
    return _XXH32_update(
      statePtr,
      input,
      length,
    );
  }

  late final _XXH32_updatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<XXH32_state_t>, ffi.Pointer<ffi.Void>,
              ffi.Size)>>('XXH32_update');
  late final _XXH32_update = _XXH32_updatePtr.asFunction<
      int Function(ffi.Pointer<XXH32_state_t>, ffi.Pointer<ffi.Void>, int)>();

  /// !
  /// @brief Returns the calculated hash value from an @ref XXH32_state_t.
  ///
  /// @param statePtr The state struct to calculate the hash from.
  ///
  /// @pre
  /// @p statePtr must not be `NULL`.
  ///
  /// @return The calculated 32-bit xxHash32 value from that state.
  ///
  /// @note
  /// Calling XXH32_digest() will not affect @p statePtr, so you can update,
  /// digest, and update again.
  ///
  /// @see @ref streaming_example "Streaming Example"
  int XXH32_digest(
    ffi.Pointer<XXH32_state_t> statePtr,
  ) {
    return _XXH32_digest(
      statePtr,
    );
  }

  late final _XXH32_digestPtr = _lookup<
      ffi.NativeFunction<
          XXH32_hash_t Function(ffi.Pointer<XXH32_state_t>)>>('XXH32_digest');
  late final _XXH32_digest =
      _XXH32_digestPtr.asFunction<int Function(ffi.Pointer<XXH32_state_t>)>();

  /// !
  /// @brief Converts an @ref XXH32_hash_t to a big endian @ref XXH32_canonical_t.
  ///
  /// @param dst  The @ref XXH32_canonical_t pointer to be stored to.
  /// @param hash The @ref XXH32_hash_t to be converted.
  ///
  /// @pre
  /// @p dst must not be `NULL`.
  ///
  /// @see @ref canonical_representation_example "Canonical Representation Example"
  void XXH32_canonicalFromHash(
    ffi.Pointer<XXH32_canonical_t> dst,
    int hash,
  ) {
    return _XXH32_canonicalFromHash(
      dst,
      hash,
    );
  }

  late final _XXH32_canonicalFromHashPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<XXH32_canonical_t>,
              XXH32_hash_t)>>('XXH32_canonicalFromHash');
  late final _XXH32_canonicalFromHash = _XXH32_canonicalFromHashPtr.asFunction<
      void Function(ffi.Pointer<XXH32_canonical_t>, int)>();

  /// !
  /// @brief Converts an @ref XXH32_canonical_t to a native @ref XXH32_hash_t.
  ///
  /// @param src The @ref XXH32_canonical_t to convert.
  ///
  /// @pre
  /// @p src must not be `NULL`.
  ///
  /// @return The converted hash.
  ///
  /// @see @ref canonical_representation_example "Canonical Representation Example"
  int XXH32_hashFromCanonical(
    ffi.Pointer<XXH32_canonical_t> src,
  ) {
    return _XXH32_hashFromCanonical(
      src,
    );
  }

  late final _XXH32_hashFromCanonicalPtr = _lookup<
      ffi.NativeFunction<
          XXH32_hash_t Function(
              ffi.Pointer<XXH32_canonical_t>)>>('XXH32_hashFromCanonical');
  late final _XXH32_hashFromCanonical = _XXH32_hashFromCanonicalPtr.asFunction<
      int Function(ffi.Pointer<XXH32_canonical_t>)>();

  /// !
  /// @brief Calculates the 64-bit hash of @p input using xxHash64.
  ///
  /// @param input The block of data to be hashed, at least @p length bytes in size.
  /// @param length The length of @p input, in bytes.
  /// @param seed The 64-bit seed to alter the hash's output predictably.
  ///
  /// @pre
  /// The memory between @p input and @p input + @p length must be valid,
  /// readable, contiguous memory. However, if @p length is `0`, @p input may be
  /// `NULL`. In C++, this also must be *TriviallyCopyable*.
  ///
  /// @return The calculated 64-bit xxHash64 value.
  ///
  /// @see @ref single_shot_example "Single Shot Example" for an example.
  int XXH64(
    ffi.Pointer<ffi.Void> input,
    int length,
    int seed,
  ) {
    return _XXH64(
      input,
      length,
      seed,
    );
  }

  late final _XXH64Ptr = _lookup<
      ffi.NativeFunction<
          XXH64_hash_t Function(
              ffi.Pointer<ffi.Void>, ffi.Size, XXH64_hash_t)>>('XXH64');
  late final _XXH64 =
      _XXH64Ptr.asFunction<int Function(ffi.Pointer<ffi.Void>, int, int)>();

  /// !
  /// @brief Allocates an @ref XXH64_state_t.
  ///
  /// @return An allocated pointer of @ref XXH64_state_t on success.
  /// @return `NULL` on failure.
  ///
  /// @note Must be freed with XXH64_freeState().
  ///
  /// @see @ref streaming_example "Streaming Example"
  ffi.Pointer<XXH64_state_t> XXH64_createState() {
    return _XXH64_createState();
  }

  late final _XXH64_createStatePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<XXH64_state_t> Function()>>(
          'XXH64_createState');
  late final _XXH64_createState =
      _XXH64_createStatePtr.asFunction<ffi.Pointer<XXH64_state_t> Function()>();

  /// !
  /// @brief Frees an @ref XXH64_state_t.
  ///
  /// @param statePtr A pointer to an @ref XXH64_state_t allocated with @ref XXH64_createState().
  ///
  /// @return @ref XXH_OK.
  ///
  /// @note @p statePtr must be allocated with XXH64_createState().
  ///
  /// @see @ref streaming_example "Streaming Example"
  int XXH64_freeState(
    ffi.Pointer<XXH64_state_t> statePtr,
  ) {
    return _XXH64_freeState(
      statePtr,
    );
  }

  late final _XXH64_freeStatePtr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<XXH64_state_t>)>>(
      'XXH64_freeState');
  late final _XXH64_freeState = _XXH64_freeStatePtr.asFunction<
      int Function(ffi.Pointer<XXH64_state_t>)>();
